# pvr.demo

./: CMakeLists.txt
pvr.demo/: PVRDemoAddonSettings.xml  addon.xml
pvr.demo/data/: test-stream_radio_B5plus.ts  test-stream_radio_br-klassik_1.ts  test-stream_radio_br-klassik_2.ts  test-stream_radio_wdr2.ts  test-stream_radio_wdr4.ts
src/: PVRDemoData.cpp  PVRDemoData.h  client.cpp  client.h
src/teststream/: bitstream.h  config.h  demuxer.cpp  demuxer.h  parser.cpp  parser.h  parser_AAC.cpp  parser_AAC.h  parser_AC3.cpp  parser_AC3.h  parser_DTS.cpp  parser_DTS.h  parser_MPEGAudio.cpp  parser_MPEGAudio.h  parser_MPEGVideo.cpp  parser_MPEGVideo.h  parser_Subtitle.cpp  parser_Subtitle.h  parser_Teletext.cpp  parser_Teletext.h  parser_h264.cpp  parser_h264.h  streamer.cpp  streamer.h  videobuffer.cpp  videobuffer.h
src/teststream/libsi/: si.cpp  si.h  util.cpp  util.h
